<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.crazypandas</groupId>
    <artifactId>FMMBedrockBridge</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>FMMBedrockBridge</name>
    <description>Bridge between FreeMinecraftModels and Geyser/Bedrock for custom model display</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>magmaguy-repo</id>
            <url>https://repo.magmaguy.com/releases</url>
        </repository>
        <repository>
            <id>opencollab</id>
            <url>https://repo.opencollab.dev/main/</url>
        </repository>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>codemc-snapshots</id>
            <url>https://repo.codemc.io/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- FreeMinecraftModels -->
        <dependency>
            <groupId>com.magmaguy</groupId>
            <artifactId>FreeMinecraftModels</artifactId>
            <version>2.5.0</version>
            <scope>provided</scope>
            <exclusions>
                <!-- These are shaded into the FMM jar at build time but still
                     listed as compile deps in the published pom. Excluding them
                     prevents Maven from trying to resolve unavailable artifacts. -->
                <exclusion>
                    <groupId>com.magmaguy</groupId>
                    <artifactId>MagmaCore</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.magmaguy</groupId>
                    <artifactId>ResourcePackManager</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.magmaguy</groupId>
                    <artifactId>EliteMobs</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.MilkBowl</groupId>
                    <artifactId>VaultAPI</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.geysermc.floodgate</groupId>
                    <artifactId>api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.geysermc.geyser</groupId>
                    <artifactId>api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>commons-io</groupId>
                    <artifactId>commons-io</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.code.gson</groupId>
                    <artifactId>gson</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- EliteMobs (soft-dep — only imported in EliteMobsHook) -->
        <dependency>
            <groupId>com.magmaguy</groupId>
            <artifactId>EliteMobs</artifactId>
            <version>10.1.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- Floodgate API -->
        <dependency>
            <groupId>org.geysermc.floodgate</groupId>
            <artifactId>api</artifactId>
            <version>2.2.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Gson (provided by Paper) -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- GeyserUtils Spigot -->
        <dependency>
            <groupId>me.zimzaza4</groupId>
            <artifactId>geyserutils-spigot</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PacketEvents -->
        <dependency>
            <groupId>com.github.retrooper</groupId>
            <artifactId>packetevents-spigot</artifactId>
            <version>2.12.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.name}-${project.version}-${maven.build.timestamp}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
        </plugins>
    </build>
</project>
